--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,14 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[[bin]]
+[[example]]
 name = "main"
-path = "bin/main.rs"
+path = "examples/main.rs"
 
 [dependencies]
 serde = { version = "1.0.125", features = ["derive"] }
 serde_json = "1.0.64"
+futures = "0.3.14"
+
+[dev-dependencies]
+tokio = { version = "1.5.0", features = ["full"] }
